--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -191,6 +191,16 @@ p {
   align-items: center;
 }
 
+.closedbet-container {
+  /* width: 100%; */
+  margin: auto;
+  width: 50%;
+  font-size: 16px;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .row {
   display: flex;
   align-items: stretch;
