--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,10 @@
   src: url('https://fonts.googleapis.com/css?family=Open Sans');
 } */
 
+.parent {
+  background-color: #30a159;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -52,16 +56,22 @@ input {
 
 .bar {
   font-size: 16px;
-  background-color: #0044ffa3;
-  color: white;
-  border: 1px solid white;
-  border-radius: 8px;
+  /* background-color: #0044ffa3; */
+  background-color: rgb(244, 239, 239);
+  color: black;
+  /* border: 1px solid white; */
+  
+  border-radius: 100px;
   border-width: 0;
 }
 
+.bar:focus{
+  background-color: gray;
+  border: 0px;
+}
+
 .bar:hover {
-  background-color: rgb(63, 150, 237);
-  color: black;
+  background-color: gray;
 }
 
 .btn-text {
@@ -86,7 +96,7 @@ input {
   margin-bottom: 16px;
   padding: 8px 16px;
   display: flex;
-  background-color: #ffffff;
+  background-color: #FFFBF1;
   border-radius: 10px;
   border: 1px solid #e4e4e455;
   box-shadow: 
@@ -96,6 +106,7 @@ input {
   /* cursor: pointer; */
   color: black;
   transition: all 0.2s;
+  background-color: rgb(247, 242, 242);
 }
 
 .abr-item {
@@ -167,7 +178,7 @@ p {
   margin:auto;
   text-align: center;
   font-weight: 500;
-  font-size: 28px;
+  font-size: 32px;
   margin-top:25%;
 }
 
