--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,18 +56,19 @@ input {
 
 .bar {
   font-size: 16px;
-  /* background-color: #0044ffa3; */
   background-color: rgb(244, 239, 239);
   color: black;
-  /* border: 1px solid white; */
-  
   border-radius: 100px;
   border-width: 0;
 }
 
-.bar:focus{
+.bar-active{
+  font-size: 16px;
   background-color: gray;
-  border: 0px;
+  color: black;
+  border-radius: 100px;
+  border-width: 0;
+  /* font-size: 60px; */
 }
 
 .bar:hover {
