--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,3 @@
-/* * {
-  font:opensans !important;
-}
-
-@font-face {
-  font-family: opensans;
-  src: url('https://fonts.googleapis.com/css?family=Open Sans');
-} */
 
 .parent {
   background-color: #30a159;
@@ -98,6 +90,7 @@ input {
 .parent-container {
   margin: auto;
   width: 96%;
+  margin-top:16px;
 }
 
 .view-item {
@@ -252,7 +245,6 @@ p {
 }
 
 .closedbet-container {
-  /* width: 100%; */
   margin: auto;
   width: 50%;
   font-size: 16px;
@@ -300,13 +292,8 @@ p {
 }
 
 .align-right {
-  /* margin-right: 10px; */
   color: #c61d1d;
   margin-left: auto;
-}
-
-.val-a:hover {
-  color: black;
 }
 
 .align-left {
